# YouTube_Channel_Tracker

./: .gitignore  Readme.md  YouTube_Channel_Tracker.code-workspace  pyproject.toml  work_step.md
.github/workflows/: fetch_stats.yml
config/: channels.json
data/: .gitkeep  UCIcAj6WkJ8vZ7DeJVgmeqKw.csv
graphs/: .gitkeep
src/: fetch_stats.py  generate_graph.py  interactive_graph.py
